IPSC/compiling_error.txt
C:\Users\Morgen\Documents\GitHub\cp\IPSC\Q.cpp: In function 'int main()':
C:\Users\Morgen\Documents\GitHub\cp\IPSC\Q.cpp:52:22: error: expected primary-expression before ')' token
         if (m[s]==0&&) {
                      ^
